# dominions-5-status

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  run-and-restart.sh
.circleci/: config.yml
src/: commands.rs  db.rs  it.rs  main.rs  model.rs  nations.rs  server.rs  slash_commands.rs  snek.rs  turn_check_receiver.rs  turn_check_sender.rs
src/commands/: add_server.rs  game_name.rs  help.rs  item.rs  list_servers.rs  mod.rs  nation_status.rs  ping.rs  remove_server.rs  search.rs  servers.rs  spell.rs
src/commands/inspector/: mod.rs
src/commands/search/: mod.rs
src/commands/servers/: add_server.rs  alias.rs  describe.rs  details.rs  details2.rs  kick.rs  list_servers.rs  lobbies.rs  lobby.rs  mod.rs  my_games.rs  new.rs  notifications.rs  register_player.rs  remove_server.rs  start.rs  turn_check.rs  turns.rs  turns2.rs  unregister_player.rs  unstart.rs  update_game_name.rs  wrappers.rs
src/commands/servers/add_server/: mod.rs  tests.rs
src/commands/servers/describe/: mod.rs
src/commands/servers/details/: mod.rs  mod2.rs  tests.rs
src/commands/servers/list_servers/: mod.rs
src/commands/servers/lobbies/: mod.rs
src/commands/servers/lobby/: mod.rs  tests.rs
src/commands/servers/nap/: mod.rs
src/commands/servers/notifications/: mod.rs
src/commands/servers/register_player/: mod.rs
src/commands/servers/remove_server/: mod.rs  (+1 more)
src/db/: mod.rs  test_helpers.rs
src/db/sql/: create_tables.sql  delete_game_server.sql  delete_lobby.sql  delete_player_from_game.sql  delete_server_players.sql  delete_started_server.sql  insert_game_server_from_lobby.sql  insert_game_server_lobby_state.sql  insert_lobby.sql  insert_player.sql  insert_server_player.sql  insert_started_game_server.sql  insert_started_server.sql  insert_started_state.sql  select_game_server_for_alias.sql  select_game_servers.sql  select_lobbies.sql  select_players_nations.sql  select_servers_for_player.sql  update_game_name.sql  update_game_with_alias.sql  update_game_with_null_started_state.sql  update_game_with_started_state.sql  update_game_with_turn.sql  update_lobby_with_alias.sql  update_lobby_with_description.sql  update_turn_notifications.sql
src/model/: game_data.rs  game_server.rs  game_state.rs  mod.rs  nap.rs  nation.rs  player.rs  raw_game_data.rs  turn_notification.rs
src/model/enums/: era.rs  mod.rs  nap_type.rs  nation_status.rs  nations.rs  submission_status.rs
src/server/: mod.rs
(+9 files in other folders)
