[package]
name = "dom5status"
version = "0.2.0"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
chrono = "0.4"
either = "1.6"
enum-primitive-derive = "0.2"
flate2 = "1.0"
futures = "0.3"
im = "15.0"
lazy_static = "1.4"
log = "0.4"
migrant_lib = {version = "0.30", features = ["d-sqlite"]}
num-traits = "0.2"
percent-encoding = "2.1"
reqwest = "0.11"
rusqlite = {version = "0.24", features = ["bundled"]}
r2d2 = "0.8"
r2d2_sqlite = "0.17"
serde = { version = "1.0", features = ["derive"] }
serenity = "0.10"
simplelog = "0.9"
tokio = { version = "1.4", features = ["macros", "rt-multi-thread", "time"]}
url = "2.2"
