[package]
name = "dom5status"
version = "0.2.1"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
chrono = "0.4"
cow-utils = "0.1.2"
either = "1.6"
enum-primitive-derive = "0.2"
flate2 = "1.0"
futures = "0.3"
im = "15.1"
lazy_static = "1.4"
log = "0.4"
migrant_lib = {version = "0.34.0", features = ["d-sqlite"]}
num-traits = "0.2"
percent-encoding = "2.1"
reqwest = {version = "0.11.23", features = ["rustls-tls", "json"], default-features=false}
rusqlite = {version = "0.29.0", features = ["bundled"]}
r2d2 = "0.8"
r2d2_sqlite = "0.22"
serde = { version = "1.0", features = ["derive"] }
serenity = {version = "0.12.0", features = ["rustls_backend", "temp_cache"]}
simplelog = "0.12.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time"]}
url = "2.5"

[profile.dev]
lto=false
